k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdf-service
spec:
  type: ClusterIP
  selector:
    app: pdf-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
